--- a/styles/scss/media.scss
+++ b/styles/scss/media.scss
@@ -76,10 +76,8 @@
             &.hero {
                 .hero-meta {
                     left:0;
-                    // top:50%;
-                    // width: 100%;
-                    // max-width: 100%;
-                    // height: 100%;
+                    top:0;
+                    height: 100%;
                     margin-left:0;
                     .hero-title{
                         font-size: 50px;
